--- a/CofreAlarme/res/values/strings.xml
+++ b/CofreAlarme/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="update_text">Você ativou o alarme</string>
     <string name="update">Você ativou o alarme?</string>
     <string name="title_activity_cofre">CofreActivity</string>
+    <string name="desativar">Desativar</string>
 
 </resources>
