timeAgo e editText para Senha
Tradução do timeAgo com replaceAll
editText na Activity principal com máscara para senha no formato
(##-##-##) - Criação de nova classe.
Condição para ativação: senha completa.

--- a/CofreAlarme/res/values/strings.xml
+++ b/CofreAlarme/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="update">Você ativou o alarme?</string>
     <string name="title_activity_cofre">CofreActivity</string>
     <string name="desativar">Desativar</string>
+    <string name="zero">00-00-00</string>
 
 </resources>
